--- a/index.html
+++ b/index.html
@@ -7,15 +7,60 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuq
-    Lg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="Profile-card">
 
 <div class="image">
 <img src="eyes.jpg" alt="" class="profile-image">
+</div>
+
+<div class="text-data">
+    <span class="name">
+WAVY
+    </span>
+    <span class="job">Photographer and programmer</span>
+</div>
+<!-- Media Buttons -->
+<div class="media-buttons">
+
+    <a href="#" style="background: blue;" class="link">
+        <i class="fa-brands fa-facebook"></i>
+
+    </a>
+
+<a href="#" style="background: black;" class="link">
+    <i class="fa-brands fa-x-twitter"></i>
+</a>
+
+<a href="#" style="background: pink;" class="link">
+    <i class="fa-brands fa-instagram"></i>
+
+</a>
+
+</div>
+           <div class="Buttons">
+                  <button class="button">Subscribe</button>
+                  <button class="button">Message</button>
+           </div>
+
+<div class="analytics">
+                         <div class="data">
+                                     <i class="fa-regular fa-heart"></i>
+                                     <span class="number">60k</span>
+                         </div>
+    
+                         <div class="data">
+                                     <i class="fa-regular fa-message"></i>
+                                     <span class="number">40k</span>
+                         </div>
+
+                         <div class="data">
+                                     <i class="fa-solid fa-share"></i>
+                                     <span class="number">20k</span>
+                         </div>
+
 </div>
 
     </div>
